--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 anyio==3.6.2
 autopep8==2.0.2
+cffi==1.15.1
 click==8.1.3
+cryptography==39.0.2
 dnspython==2.3.0
+ecdsa==0.18.0
 fastapi==0.92.0
 gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
+jwt==1.3.1
+passlib==1.7.4
+pyasn1==0.4.8
 pycodestyle==2.10.0
+pycparser==2.21
 pydantic==1.10.5
 pymongo==4.3.3
 python-dotenv==1.0.0
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.25.0
+tomli==2.0.1
 typing_extensions==4.5.0
 uvicorn==0.20.0
