--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,60 @@
 anyio==3.6.2
 autopep8==2.0.2
 bcrypt==4.0.1
+CacheControl==0.12.11
+cachetools==5.3.0
+certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 cryptography==39.0.2
 dnspython==2.3.0
 ecdsa==0.18.0
 fastapi==0.92.0
+firebase-admin==6.1.0
+google-api-core==2.11.0
+google-api-python-client==2.84.0
+google-auth==2.17.2
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.0
+google-cloud-storage==2.8.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.59.0
+grpcio==1.53.0
+grpcio-status==1.53.0
 gunicorn==20.1.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.4
 jwt==1.3.1
+msgpack==1.0.5
 passlib==1.7.4
+proto-plus==1.22.2
+protobuf==4.22.1
 pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.5
+PyJWT==2.6.0
 pymongo==4.3.3
+pyparsing==3.0.9
 python-dotenv==1.0.0
+python-http-client==3.3.7
 python-jose==3.3.0
+python-multipart==0.0.6
+requests==2.28.2
 rsa==4.9
-six==1.16.0
 sendgrid==6.10.0
+six==1.16.0
 sniffio==1.3.0
+starkbank-ecdsa==2.2.0
 starlette==0.25.0
 tomli==2.0.1
 typing_extensions==4.5.0
+uritemplate==4.1.1
+urllib3==1.26.15
 uvicorn==0.20.0
-python-multipart==0.0.6
+websockets==11.0
