--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.1.3
 cryptography==39.0.2
 dnspython==2.3.0
 ecdsa==0.18.0
+exceptiongroup==1.1.1
 fastapi==0.92.0
 firebase-admin==6.1.0
 google-api-core==2.11.0
@@ -28,9 +29,12 @@ gunicorn==20.1.0
 h11==0.14.0
 httplib2==0.22.0
 idna==3.4
+iniconfig==2.0.0
 jwt==1.3.1
 msgpack==1.0.5
+packaging==23.1
 passlib==1.7.4
+pluggy==1.0.0
 proto-plus==1.22.2
 protobuf==4.22.1
 pyasn1==0.4.8
@@ -41,6 +45,7 @@ pydantic==1.10.5
 PyJWT==2.6.0
 pymongo==4.3.3
 pyparsing==3.0.9
+pytest==7.3.1
 python-dotenv==1.0.0
 python-http-client==3.3.7
 python-jose==3.3.0
